--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ecommerce-shared",
   "version": "0.1.0",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
     "mongodb": "^5.7.0",
